remove gnolle from Nordstrasse
f_rmgnoll231110.erf
* Removed most gnoll spawns
* Changed gnoll post maps a bit (minor placeable removed)

--- a/mod/area/gabelstr_nord_05.git.yml
+++ b/mod/area/gabelstr_nord_05.git.yml
@@ -99,7 +99,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 800}
     Hardness: {type: :byte, value: 15}
     Interruptable: {type: :byte, value: 1}
@@ -161,7 +161,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 800}
     Hardness: {type: :byte, value: 15}
     Interruptable: {type: :byte, value: 1}
@@ -223,7 +223,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 1}
+    GenericType_New: {type: :dword, value: 1}
     HP: {type: :short, value: 500}
     Hardness: {type: :byte, value: 15}
     Interruptable: {type: :byte, value: 1}
@@ -271,242 +271,8 @@ Door List:
     Z: {type: :float, value: -0.17}
 Encounter List: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    Comment: {type: :cexostr, value: ""}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: erfahrenergnollk}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 4.7588}
-        Y: {type: :float, value: 0.2095}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 4.7737}
-        Y: {type: :float, value: 15.7316}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.7864}
-        Y: {type: :float, value: 15.539}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 65.2669}
-        Y: {type: :float, value: 15.8916}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 54.0972}
-        Y: {type: :float, value: 39.9933}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 49.7238}
-        Y: {type: :float, value: 22.3611}
-        Z: {type: :float, value: 0.0}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 94.9462}
-    YPosition: {type: :float, value: 27.3585}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: gnoll_jaeger1}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 5.0401}
-        Y: {type: :float, value: 1.1505}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 4.9766}
-        Y: {type: :float, value: 15.1334}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.6228}
-        Y: {type: :float, value: 14.6615}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnollschuetzen
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 59.0399}
-        Y: {type: :float, value: 13.9783}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 47.4897}
-        Y: {type: :float, value: 22.5003}
-        Z: {type: :float, value: -0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 46.3673}
-        Y: {type: :float, value: 39.3238}
-        Z: {type: :float, value: -0.004}
-    Tag: {type: :cexostr, value: Gnollschuetzen}
-    TemplateResRef: {type: :resref, value: gnollschuetzen}
-    XPosition: {type: :float, value: 93.6237}
-    YPosition: {type: :float, value: 27.2432}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: erfahrenergnollk}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.4754}
-        Y: {type: :float, value: 5.7872}
-        Z: {type: :float, value: 10.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 10.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.0533}
-        Y: {type: :float, value: -0.3749}
-        Z: {type: :float, value: 10.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.012}
-        Y: {type: :float, value: 5.8892}
-        Z: {type: :float, value: 10.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 61.3883}
-        Y: {type: :float, value: 36.8657}
-        Z: {type: :float, value: 0.0039}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 47.5107}
-        Y: {type: :float, value: 50.3498}
-        Z: {type: :float, value: 5.0}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 97.5663}
-    YPosition: {type: :float, value: 57.1012}
-    ZPosition: {type: :float, value: 0.0}
+  value: []
+
 List: 
   type: :list
   value: []
@@ -5978,7 +5744,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 351}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
