--- a/mod/area/gabelstr_nord_07.git.yml
+++ b/mod/area/gabelstr_nord_07.git.yml
@@ -26,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 92}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 80}
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -85,81 +85,8 @@ Door List:
     Z: {type: :float, value: -0.44}
 Encounter List: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: erfahrenergnollk}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -12.473}
-        Y: {type: :float, value: 12.6518}
-        Z: {type: :float, value: 0.0215}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -10.4087}
-        Y: {type: :float, value: 2.6076}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.2359}
-        Y: {type: :float, value: 14.0609}
-        Z: {type: :float, value: 0.0215}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 66.3378}
-        Y: {type: :float, value: 43.1265}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 32.4251}
-        Y: {type: :float, value: 84.0737}
-        Z: {type: :float, value: 0.0049}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 26.3141}
-    YPosition: {type: :float, value: 38.3369}
-    ZPosition: {type: :float, value: 0.0}
+  value: []
+
 List: 
   type: :list
   value: []
@@ -5403,7 +5330,6 @@ VarTable:
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
-    Comment: {type: :cexostr, value: ""}
     Name: {type: :cexostr, value: weather}
     Type: {type: :dword, value: 1}
     Value: {type: :int, value: 2}
