--- a/mod/area/minen01.git.yml
+++ b/mod/area/minen01.git.yml
@@ -335,7 +335,6 @@ Door List:
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: 2.8274}
     CloseLockDC: {type: :byte, value: 0}
-    Comment: {type: :cexostr, value: ""}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
     Description: 
@@ -392,405 +391,8 @@ Door List:
     Z: {type: :float, value: 1.5}
 Encounter List: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    Comment: {type: :cexostr, value: ""}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 4.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: gnoll_jaeger1}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 8.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: gnoll_reisser}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1294}
-        CR: {type: :float, value: 16.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: gnoll_butcher}
-        SingleSpawn: {type: :byte, value: 1}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.2502}
-        Y: {type: :float, value: 1.7806}
-        Z: {type: :float, value: 0.0917}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.132}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.2538}
-        Y: {type: :float, value: -0.1237}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.597}
-        Y: {type: :float, value: 1.8611}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 39.015}
-        Y: {type: :float, value: 38.0888}
-        Z: {type: :float, value: -0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 31.099}
-        Y: {type: :float, value: 37.8468}
-        Z: {type: :float, value: -0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 31.1754}
-        Y: {type: :float, value: 30.5398}
-        Z: {type: :float, value: -0.0}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 34.7962}
-    YPosition: {type: :float, value: 4.9757}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 8.0}
-        ResRef: {type: :resref, value: gnoll_reisser}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 5}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -20.6896}
-        Y: {type: :float, value: 0.0914}
-        Z: {type: :float, value: 0.0737}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.2153}
-        Y: {type: :float, value: 3.7631}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -20.627}
-        Y: {type: :float, value: 4.0281}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnollschuetzen
-    MaxCreatures: {type: :int, value: 8}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 8}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 57.182}
-        Y: {type: :float, value: 37.3679}
-        Z: {type: :float, value: -0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 60.8262}
-        Y: {type: :float, value: 26.7579}
-        Z: {type: :float, value: -0.0}
-    Tag: {type: :cexostr, value: Gnollschuetzen}
-    TemplateResRef: {type: :resref, value: gnollschuetzen}
-    XPosition: {type: :float, value: 55.5381}
-    YPosition: {type: :float, value: 5.0385}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 4.0}
-        ResRef: {type: :resref, value: gnoll_jaeger1}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 8.0}
-        ResRef: {type: :resref, value: gnoll_reisser}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1294}
-        CR: {type: :float, value: 16.0}
-        ResRef: {type: :resref, value: gnoll_butcher}
-        SingleSpawn: {type: :byte, value: 1}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.2502}
-        Y: {type: :float, value: 1.7806}
-        Z: {type: :float, value: 0.0917}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.132}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.2538}
-        Y: {type: :float, value: -0.1237}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.597}
-        Y: {type: :float, value: 1.8611}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 48.8717}
-        Y: {type: :float, value: 30.2012}
-        Z: {type: :float, value: -0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 64.585}
-        Y: {type: :float, value: 35.9866}
-        Z: {type: :float, value: -0.0}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 34.7837}
-    YPosition: {type: :float, value: 6.9443}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1294}
-        CR: {type: :float, value: 16.0}
-        ResRef: {type: :resref, value: gnoll_butcher}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.2502}
-        Y: {type: :float, value: 1.7806}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.2538}
-        Y: {type: :float, value: -0.1237}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.597}
-        Y: {type: :float, value: 1.8611}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 2}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 53.0191}
-        Y: {type: :float, value: 44.0388}
-        Z: {type: :float, value: 1.1333}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 35.4832}
-    YPosition: {type: :float, value: 5.8128}
-    ZPosition: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1294}
-        CR: {type: :float, value: 9.0}
-        ResRef: {type: :resref, value: gnoll_schamane}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 18.0}
-        ResRef: {type: :resref, value: gnoll_haeuptling}
-        SingleSpawn: {type: :byte, value: 1}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.2502}
-        Y: {type: :float, value: 1.7806}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.2538}
-        Y: {type: :float, value: -0.1237}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 20.597}
-        Y: {type: :float, value: 1.8611}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle
-    MaxCreatures: {type: :int, value: 3}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 3}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 54.8336}
-        Y: {type: :float, value: 40.075}
-        Z: {type: :float, value: 0.01}
-    Tag: {type: :cexostr, value: Gnolle}
-    TemplateResRef: {type: :resref, value: gnolle001}
-    XPosition: {type: :float, value: 35.4444}
-    YPosition: {type: :float, value: 5.6147}
-    ZPosition: {type: :float, value: 0.0}
+  value: []
+
 List: 
   type: :list
   value: []
