--- a/mod/area/gabelstr_nord_09.git.yml
+++ b/mod/area/gabelstr_nord_09.git.yml
@@ -38,7 +38,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -90,7 +90,6 @@ Encounter List:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
     Active: {type: :byte, value: 1}
-    Comment: {type: :cexostr, value: ""}
     CreatureList: 
       type: :list
       value: 
@@ -98,7 +97,6 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 13}
         CR: {type: :float, value: 5.0}
-        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: baerzgr3}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
@@ -246,137 +244,6 @@ Encounter List:
     TemplateResRef: {type: :resref, value: braunbren}
     XPosition: {type: :float, value: 45.8814}
     YPosition: {type: :float, value: 97.4959}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 388}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: erfahrenergnollk}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -1.2778}
-        Y: {type: :float, value: 3.5139}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 26.5139}
-        Y: {type: :float, value: -0.7454}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 26.9399}
-        Y: {type: :float, value: 0.3194}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Gnolle, schwer
-    MaxCreatures: {type: :int, value: 6}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 4}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 35.6204}
-        Y: {type: :float, value: 57.1551}
-        Z: {type: :float, value: -0.0}
-    Tag: {type: :cexostr, value: Gnolle_schwer}
-    TemplateResRef: {type: :resref, value: gnolleschwer}
-    XPosition: {type: :float, value: 7.9352}
-    YPosition: {type: :float, value: 4.8541}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: []
-
-    Difficulty: {type: :int, value: 5}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -31.1991}
-        Y: {type: :float, value: 6.7083}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -30.3473}
-        Y: {type: :float, value: 4.8982}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.4259}
-        Y: {type: :float, value: 3.088}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: "Gnollesch\xFCtzen"
-    MaxCreatures: {type: :int, value: 6}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 3}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 3600}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 12.2583}
-        Y: {type: :float, value: 78.4104}
-        Z: {type: :float, value: 5.0}
-    Tag: {type: :cexostr, value: Gnolleschtzen}
-    TemplateResRef: {type: :resref, value: gnolle002}
-    XPosition: {type: :float, value: 36.3658}
-    YPosition: {type: :float, value: 6.0069}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
