--- a/mod/area/wildnis_nord02.git.yml
+++ b/mod/area/wildnis_nord02.git.yml
@@ -9,7 +9,6 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 51}
     AmbientSndNitVol: {type: :int, value: 32}
-    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 89}
     MusicBattle: {type: :int, value: 60}
     MusicDay: {type: :int, value: 1}
@@ -21,8 +20,70 @@ Creature List:
 
 Door List: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -1.5708}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 20}
+    Description: 
+      type: :cexolocstr
+      str_ref: 78867
+      value: {}
 
+    DisarmDC: {type: :byte, value: 20}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 28}
+    GenericType_New: {type: :dword, value: 237}
+    HP: {type: :short, value: 20}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: Magierturm01_2_WildnissNord02}
+    LinkedToFlags: {type: :byte, value: 1}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 14453
+      value: 
+        0: Strong Door 20q0
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 28}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 600}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: wildnis_nord02_2_wild_nord_wiz}
+    TemplateResRef: {type: :resref, value: ctp_door_20q0}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 1}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 63.7}
+    Y: {type: :float, value: 75.0}
+    Z: {type: :float, value: 5.0}
 Encounter List: 
   type: :list
   value: 
@@ -556,8 +617,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 79.9643}
-    Y: {type: :float, value: 68.5526}
+    X: {type: :float, value: 80.4938}
+    Y: {type: :float, value: 69.0029}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -2196,8 +2257,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 69.2574}
-    Y: {type: :float, value: 71.2034}
+    X: {type: :float, value: 67.3901}
+    Y: {type: :float, value: 69.2253}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -2326,15 +2387,15 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 64.6294}
-    Y: {type: :float, value: 77.3923}
-    Z: {type: :float, value: 5.01}
+    X: {type: :float, value: 63.8961}
+    Y: {type: :float, value: 78.1217}
+    Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 344}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.3927}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2391,8 +2452,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 73.8104}
-    Y: {type: :float, value: 70.1218}
+    X: {type: :float, value: 71.5819}
+    Y: {type: :float, value: 70.9921}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -2521,8 +2582,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 71.093}
-    Y: {type: :float, value: 71.9876}
+    X: {type: :float, value: 69.2257}
+    Y: {type: :float, value: 70.0095}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -2586,9 +2647,9 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 76.5451}
-    Y: {type: :float, value: 69.7142}
-    Z: {type: :float, value: 5.0}
+    X: {type: :float, value: 74.6778}
+    Y: {type: :float, value: 67.7361}
+    Z: {type: :float, value: 5.01}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -2716,8 +2777,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 65.4567}
-    Y: {type: :float, value: 78.9594}
+    X: {type: :float, value: 65.8467}
+    Y: {type: :float, value: 79.5276}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -2911,9 +2972,9 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 62.6587}
-    Y: {type: :float, value: 76.1203}
-    Z: {type: :float, value: 5.01}
+    X: {type: :float, value: 61.9029}
+    Y: {type: :float, value: 75.7441}
+    Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -3171,8 +3232,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 74.6648}
-    Y: {type: :float, value: 71.4006}
+    X: {type: :float, value: 72.7975}
+    Y: {type: :float, value: 69.4225}
     Z: {type: :float, value: 5.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -3438,6 +3499,71 @@ Placeable List:
     X: {type: :float, value: 19.5142}
     Y: {type: :float, value: 9.6748}
     Z: {type: :float, value: 0.01}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 58}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.0}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 15}
+    Description: 
+      type: :cexolocstr
+      str_ref: 14586
+      value: {}
+
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    HP: {type: :short, value: 15}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 5700
+      value: {}
+
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 416}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
+    Tag: {type: :cexostr, value: Campfire}
+    TemplateResRef: {type: :resref, value: plc_campfr}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 60.1549}
+    Y: {type: :float, value: 70.1248}
+    Z: {type: :float, value: 5.0}
 SoundList: 
   type: :list
   value: 
@@ -3845,6 +3971,7 @@ VarTable:
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
+    Comment: {type: :cexostr, value: ""}
     Name: {type: :cexostr, value: weather}
     Type: {type: :dword, value: 1}
     Value: {type: :int, value: 2}
