Braunbaer: don't be naked dwarf
refs #430

--- a/mod/uti/sum_cardp108.uti.yml
+++ b/mod/uti/sum_cardp108.uti.yml
@@ -46,7 +46,7 @@ PropertiesList:
     Subtype: {type: :word, value: 329}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: CDRU_3_baergrz3}
+Tag: {type: :cexostr, value: CDRU_3_baerzgr3}
 TemplateResRef: {type: :resref, value: sum_cardp108}
 VarTable: 
   type: :list
